load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_plugin", "java_test")
load("//rules/maven_deps:mabel.bzl", "artifact", "mabel_rule")
load("//tools:linters.bzl", "checkstyle_test")

checkstyle_test(
    name = "checkstyle",
    srcs = [
        "//resolver:api_lib",
        "//resolver:api_model",
        "//resolver:graph_resolver_lib",
        "//resolver:impl_lib",
        "//resolver:merger",
        "//resolver:merger_bin",
        "//resolver:migration_tooling_graph_resolver",
        "//resolver:resolver_bin",
        "//resolver:serialization",
        "//resolver:test_utils",
        "//resolver:timing_lib",
    ],
)

# AutoValue annotation processor
java_plugin(
    name = "autovalue_plugin",
    processor_class = "com.google.auto.value.processor.AutoValueProcessor",
    deps = ["@mvn//com/google/auto/value/auto-value"],
)

_AETHER_VERSION = "1.1.0"

_APACHE_MAVEN_VERSION = "3.8.1"

mabel_rule(
    name = "main_deps",
    default_exports_generation = "requested_deps",
    default_target_type = "naive",
    lockfile_path = "resolver/maven_install.json",
    maven_deps = [
        artifact(
            "com.google.guava:guava:27.0.1-jre",
            type = "jar",
        ),
        artifact(
            "org.apache.commons:commons-lang3:jar:3.8.1",
        ),
        artifact(
            "com.google.code.findbugs:jsr305:3.0.2",
        ),

        #command-line arguments parsing
        artifact(
            "com.beust:jcommander:1.72",
        ),

        #POM management
        artifact(
            "org.eclipse.aether:aether-api:" + _AETHER_VERSION,
        ),
        artifact(
            "org.eclipse.aether:aether-spi:" + _AETHER_VERSION,
        ),
        artifact(
            "org.eclipse.aether:aether-impl:" + _AETHER_VERSION,
        ),
        artifact(
            "org.eclipse.aether:aether-util:" + _AETHER_VERSION,
        ),
        artifact(
            "org.eclipse.aether:aether-transport-http:" + _AETHER_VERSION,
        ),
        artifact(
            "org.eclipse.aether:aether-transport-classpath:" + _AETHER_VERSION,
        ),
        artifact(
            "org.eclipse.aether:aether-transport-wagon:" + _AETHER_VERSION,
        ),
        artifact(
            "org.eclipse.aether:aether-transport-file:" + _AETHER_VERSION,
        ),
        artifact(
            "org.eclipse.aether:aether-connector-basic:" + _AETHER_VERSION,
        ),
        artifact(
            "org.apache.maven:maven-aether-provider:3.3.9",
        ),
        artifact(
            "org.apache.maven:maven-model:" + _APACHE_MAVEN_VERSION,
        ),
        artifact(
            "org.apache.maven:maven-model-builder:" + _APACHE_MAVEN_VERSION,
        ),
        artifact(
            "org.apache.maven:maven-repository-metadata:" + _APACHE_MAVEN_VERSION,
        ),
        artifact(
            "org.apache.maven:maven-artifact:" + _APACHE_MAVEN_VERSION,
        ),
        artifact(
            "org.apache.httpcomponents:httpclient:4.5.13",
        ),
        artifact(
            "org.codehaus.plexus:plexus-interpolation:1.26",
        ),
        artifact(
            "org.codehaus.plexus:plexus-utils:3.3.0",
        ),

        #model classes
        artifact(
            "com.google.auto.value:auto-value-annotations:1.7",
        ),
        artifact(
            "com.google.auto.value:auto-value:1.7",
            type = "processor",
        ),
        #for creating and reading json
        artifact(
            "com.google.code.gson:gson:2.8.5",
        ),

        #logging - nop
        artifact(
            "org.slf4j:slf4j-nop:1.7.25",
        ),

        #testing
        artifact(
            "junit:junit:4.12",
            test_only = True,
        ),
        artifact(
            "org.mockito:mockito-core:2.23.4",
            test_only = True,
        ),
    ],
    public_targets_category = "requested_deps",
)

java_library(
    name = "api_model",
    srcs = glob(["src/main/java/net/evendanan/bazel/mvn/api/model/*.java"]),
    plugins = [":autovalue_plugin"],
    deps = [
        "@mvn//com/google/auto/value/auto-value-annotations",
    ],
)

java_library(
    name = "serialization",
    srcs = glob(["src/main/java/net/evendanan/bazel/mvn/api/serialization/*.java"]),
    deps = [
        ":api_model",
        "@mvn//com/google/code/gson/gson",
    ],
)

java_test(
    name = "serialization_test",
    size = "small",
    srcs = ["src/test/net/evendanan/bazel/mvn/api/serialization/SerializationTest.java"],
    test_class = "net.evendanan.bazel.mvn.api.serialization.SerializationTest",
    deps = [
        ":api_lib",
        ":serialization",
        "@mvn//junit/junit",
        "@mvn//org/mockito/mockito-core",
    ],
)

java_library(
    name = "graph_resolver_lib",
    srcs = glob(["src/main/java/com/google/devtools/bazel/workspace/maven/*.java"]),
    runtime_deps = [
        "@mvn//org/codehaus/plexus/plexus-interpolation",
        "@mvn//org/codehaus/plexus/plexus-utils",
    ],
    deps = [
        ":api_lib",
        "@mvn//com/google/code/findbugs/jsr305",
        "@mvn//com/google/guava/guava",
        "@mvn//org/apache/commons/commons-lang3",
        "@mvn//org/apache/httpcomponents/httpclient",
        "@mvn//org/apache/maven/maven-aether-provider",
        "@mvn//org/apache/maven/maven-artifact",
        "@mvn//org/apache/maven/maven-builder-support",
        "@mvn//org/apache/maven/maven-model",
        "@mvn//org/apache/maven/maven-model-builder",
        "@mvn//org/apache/maven/maven-repository-metadata",
        "@mvn//org/eclipse/aether/aether-api",
        "@mvn//org/eclipse/aether/aether-connector-basic",
        "@mvn//org/eclipse/aether/aether-impl",
        "@mvn//org/eclipse/aether/aether-spi",
        "@mvn//org/eclipse/aether/aether-transport-classpath",
        "@mvn//org/eclipse/aether/aether-transport-file",
        "@mvn//org/eclipse/aether/aether-transport-http",
        "@mvn//org/eclipse/aether/aether-transport-wagon",
        "@mvn//org/eclipse/aether/aether-util",
    ],
)

java_library(
    name = "migration_tooling_graph_resolver",
    srcs = glob(["src/main/java/com/google/devtools/bazel/workspace/maven/adapter/*.java"]),
    deps = [
        ":api_lib",
        ":graph_resolver_lib",
        "@mvn//com/google/guava/guava",
        "@mvn//org/apache/maven/maven-model",
    ],
)

java_library(
    name = "timing_lib",
    srcs = glob(["src/main/java/net/evendanan/timing/*.java"]),
    runtime_deps = [],
    deps = [
        "@mvn//com/google/code/findbugs/jsr305",
        "@mvn//com/google/guava/guava",
        "@mvn//org/apache/commons/commons-lang3",
    ],
)

java_library(
    name = "api_lib",
    srcs = glob(["src/main/java/net/evendanan/bazel/mvn/api/*.java"]),
    visibility = ["//visibility:public"],
    exports = [":api_model"],
    runtime_deps = [],
    deps = [
        ":api_model",
        "@mvn//com/google/code/findbugs/jsr305",
        "@mvn//com/google/guava/guava",
        "@mvn//org/apache/commons/commons-lang3",
    ],
)

java_library(
    name = "impl_lib",
    srcs = glob(["src/main/java/net/evendanan/bazel/mvn/impl/*.java"]),
    resource_strip_prefix = "resolver/src/main/java/net/evendanan/bazel/mvn/impl",
    resources = [
        "src/main/java/net/evendanan/bazel/mvn/impl/dependencies-http-repo-rules.bzl.template",
        "src/main/java/net/evendanan/bazel/mvn/impl/dependencies-sub-folder-header.bzl.template",
        "src/main/java/net/evendanan/bazel/mvn/impl/dependencies-targets-macro.bzl.template",
    ],
    runtime_deps = [],
    deps = [
        ":api_lib",
        ":timing_lib",
        "@mvn//com/google/code/findbugs/jsr305",
        "@mvn//com/google/code/gson/gson",
        "@mvn//com/google/guava/guava",
        "@mvn//org/apache/commons/commons-lang3",
    ],
)

java_library(
    name = "merger",
    srcs = glob(["src/main/java/net/evendanan/bazel/mvn/merger/*.java"]),
    deps = [
        ":api_lib",
        "@mvn//com/google/code/findbugs/jsr305",
        "@mvn//com/google/guava/guava",
        "@mvn//org/apache/commons/commons-lang3",
    ],
)

java_binary(
    name = "resolver_bin",
    srcs = ["src/main/java/net/evendanan/bazel/mvn/Resolver.java"],
    main_class = "net.evendanan.bazel.mvn.Resolver",
    visibility = ["//visibility:public"],
    runtime_deps = ["@mvn//org/slf4j/slf4j-nop"],
    deps = [
        ":api_lib",
        ":impl_lib",
        ":migration_tooling_graph_resolver",
        ":serialization",
        ":timing_lib",
        "@mvn//com/beust/jcommander",
        "@mvn//com/google/code/findbugs/jsr305",
        "@mvn//com/google/guava/guava",
        "@mvn//org/apache/commons/commons-lang3",
        "@mvn//org/apache/maven/maven-model",
    ],
)

java_binary(
    name = "merger_bin",
    srcs = [
        "src/main/java/net/evendanan/bazel/mvn/CommandLineOptions.java",
        "src/main/java/net/evendanan/bazel/mvn/Merger.java",
    ],
    main_class = "net.evendanan.bazel.mvn.Merger",
    visibility = ["//visibility:public"],
    runtime_deps = ["@mvn//org/slf4j/slf4j-nop"],
    deps = [
        ":api_lib",
        ":impl_lib",
        ":merger",
        ":serialization",
        ":timing_lib",
        "@mvn//com/beust/jcommander",
        "@mvn//com/google/code/findbugs/jsr305",
        "@mvn//com/google/guava/guava",
        "@mvn//org/apache/commons/commons-lang3",
    ],
)

#### Tests below

java_library(
    name = "test_utils",
    testonly = True,
    srcs = ["src/test/net/evendanan/bazel/mvn/TestUtils.java"],
    deps = [
        ":api_lib",
        "@mvn//com/google/code/findbugs/jsr305",
        "@mvn//com/google/guava/guava",
        "@mvn//org/apache/commons/commons-lang3",
        "@mvn//org/mockito/mockito-core",
    ],
)

java_test(
    name = "timing_data",
    size = "small",
    srcs = ["src/test/net/evendanan/timing/TimingDataTest.java"],
    test_class = "net.evendanan.timing.TimingDataTest",
    deps = [
        ":timing_lib",
        "@mvn//junit/junit",
    ],
)

java_test(
    name = "timing_timer",
    size = "small",
    srcs = [
        "src/test/net/evendanan/timing/TaskTimingTest.java",
        "src/test/net/evendanan/timing/TimingDataTest.java",
    ],
    test_class = "net.evendanan.timing.TaskTimingTest",
    deps = [
        ":timing_lib",
        "@mvn//junit/junit",
    ],
)

java_test(
    name = "classifiers_test",
    size = "small",
    srcs = ["src/test/net/evendanan/bazel/mvn/impl/RuleClassifiersTest.java"],
    resource_strip_prefix = "resolver/src/test/net/evendanan/bazel/mvn/resourses/",
    resources = [
        "src/test/net/evendanan/bazel/mvn/resourses/dataenum-1.0.2.jar",
        "src/test/net/evendanan/bazel/mvn/resourses/dataenum-processor-1.0.2.jar",
        "src/test/net/evendanan/bazel/mvn/resourses/dataenum-processor-1.0.2-with-comments.jar",
        "src/test/net/evendanan/bazel/mvn/resourses/mockk-1.0.jar",
        "src/test/net/evendanan/bazel/mvn/resourses/mockk-1.0-for-android.aar",
        "src/test/net/evendanan/bazel/mvn/resourses/mockk-1.0-for-android.jar",
    ],
    test_class = "net.evendanan.bazel.mvn.impl.RuleClassifiersTest",
    deps = [
        ":api_lib",
        ":impl_lib",
        "@mvn//com/google/guava/guava",
        "@mvn//junit/junit",
        "@mvn//net/bytebuddy/byte-buddy",
        "@mvn//net/bytebuddy/byte-buddy-agent",
        "@mvn//org/mockito/mockito-core",
        "@mvn//org/objenesis/objenesis",
    ],
)

java_test(
    name = "composite_formater_test",
    size = "small",
    srcs = ["src/test/net/evendanan/bazel/mvn/impl/CompositeFormatterTest.java"],
    test_class = "net.evendanan.bazel.mvn.impl.CompositeFormatterTest",
    deps = [
        ":api_lib",
        ":impl_lib",
        "@mvn//junit/junit",
        "@mvn//net/bytebuddy/byte-buddy",
        "@mvn//net/bytebuddy/byte-buddy-agent",
        "@mvn//org/mockito/mockito-core",
        "@mvn//org/objenesis/objenesis",
    ],
)

java_test(
    name = "merger_tests",
    size = "small",
    srcs = [
        "src/test/net/evendanan/bazel/mvn/merger/DefaultMergerTest.java",
        #GraphUtilsTest is needed because it has some utility functions
        "src/test/net/evendanan/bazel/mvn/merger/GraphUtilsTest.java",
    ],
    test_class = "net.evendanan.bazel.mvn.merger.DefaultMergerTest",
    deps = [
        ":api_lib",
        ":merger",
        "@mvn//junit/junit",
        "@mvn//org/mockito/mockito-core",
    ],
)

java_test(
    name = "latest_version_merger_tests",
    size = "small",
    srcs = [
        "src/test/net/evendanan/bazel/mvn/merger/LatestVersionMergerTest.java",
    ],
    test_class = "net.evendanan.bazel.mvn.merger.LatestVersionMergerTest",
    deps = [
        ":api_model",
        ":merger",
        "@mvn//junit/junit",
        "@mvn//org/mockito/mockito-core",
    ],
)

java_test(
    name = "version_compare_tests",
    size = "small",
    srcs = [
        "src/test/net/evendanan/bazel/mvn/merger/VersionComparatorTest.java",
    ],
    test_class = "net.evendanan.bazel.mvn.merger.VersionComparatorTest",
    deps = [
        ":merger",
        "@mvn//junit/junit",
        "@mvn//org/mockito/mockito-core",
    ],
)

java_test(
    name = "public_category_tests",
    size = "small",
    srcs = [
        "src/test/net/evendanan/bazel/mvn/merger/PublicTargetsCategoryTest.java",
    ],
    test_class = "net.evendanan.bazel.mvn.merger.PublicTargetsCategoryTest",
    deps = [
        ":api_lib",
        ":merger",
        "@mvn//junit/junit",
        "@mvn//org/mockito/mockito-core",
    ],
)

java_test(
    name = "test_only_merger_test",
    size = "small",
    srcs = [
        "src/test/net/evendanan/bazel/mvn/merger/TestOnlyMarkerTest.java",
    ],
    test_class = "net.evendanan.bazel.mvn.merger.TestOnlyMarkerTest",
    deps = [
        ":api_lib",
        ":merger",
        "@mvn//junit/junit",
        "@mvn//org/mockito/mockito-core",
    ],
)

java_test(
    name = "downloader_tests",
    size = "small",
    srcs = ["src/test/net/evendanan/bazel/mvn/merger/ArtifactDownloaderTest.java"],
    test_class = "net.evendanan.bazel.mvn.merger.ArtifactDownloaderTest",
    deps = [
        ":api_lib",
        ":merger",
        "@mvn//com/google/guava/guava",
        "@mvn//junit/junit",
    ],
)

java_test(
    name = "graph_util_tests",
    size = "small",
    srcs = ["src/test/net/evendanan/bazel/mvn/merger/GraphUtilsTest.java"],
    test_class = "net.evendanan.bazel.mvn.merger.GraphUtilsTest",
    deps = [
        ":api_lib",
        ":merger",
        "@mvn//junit/junit",
        "@mvn//org/mockito/mockito-core",
    ],
)

java_test(
    name = "graph_checks_tests",
    size = "small",
    srcs = ["src/test/net/evendanan/bazel/mvn/merger/GraphVerificationsTest.java"],
    test_class = "net.evendanan.bazel.mvn.merger.GraphVerificationsTest",
    deps = [
        ":api_lib",
        ":merger",
        "@mvn//junit/junit",
        "@mvn//org/mockito/mockito-core",
    ],
)

java_test(
    name = "formatters_test",
    size = "small",
    srcs = ["src/test/net/evendanan/bazel/mvn/impl/FormattersTests.java"],
    test_class = "net.evendanan.bazel.mvn.impl.FormattersTests",
    deps = [
        ":api_lib",
        ":impl_lib",
        ":test_utils",
        "@mvn//junit/junit",
        "@mvn//org/mockito/mockito-core",
    ],
)

java_test(
    name = "target_test",
    size = "small",
    srcs = ["src/test/net/evendanan/bazel/mvn/impl/TargetTest.java"],
    test_class = "net.evendanan.bazel.mvn.impl.TargetTest",
    deps = [":api_lib"],
)

java_test(
    name = "dependency_test",
    size = "small",
    srcs = ["src/test/net/evendanan/bazel/mvn/impl/DependencyToolsTest.java"],
    test_class = "net.evendanan.bazel.mvn.impl.DependencyToolsTest",
    deps = [
        ":api_lib",
        "@mvn//junit/junit",
    ],
)

java_test(
    name = "real_writers_test",
    size = "small",
    srcs = ["src/test/net/evendanan/bazel/mvn/impl/WritersTests.java"],
    test_class = "net.evendanan.bazel.mvn.impl.WritersTests",
    deps = [
        ":api_lib",
        ":impl_lib",
        ":test_utils",
        "@mvn//com/google/guava/guava",
        "@mvn//junit/junit",
        "@mvn//org/mockito/mockito-core",
    ],
)

java_test(
    name = "graph_resolver_lib_test",
    size = "small",
    srcs = ["src/test/com/google/devtools/bazel/workspace/maven/ArtifactBuilderTest.java"],
    test_class = "com.google.devtools.bazel.workspace.maven.ArtifactBuilderTest",
    deps = [
        ":graph_resolver_lib",
        "@mvn//com/google/guava/guava",
        "@mvn//junit/junit",
        "@mvn//org/apache/maven/maven-model",
        "@mvn//org/mockito/mockito-core",
    ],
)

java_test(
    name = "sources_locator_test",
    size = "small",
    srcs = ["src/test/net/evendanan/bazel/mvn/merger/SourcesLocatorTest.java"],
    test_class = "net.evendanan.bazel.mvn.merger.SourcesLocatorTest",
    deps = [
        ":api_lib",
        ":merger",
        "@mvn//com/google/guava/guava",
        "@mvn//junit/junit",
        "@mvn//net/bytebuddy/byte-buddy",
        "@mvn//net/bytebuddy/byte-buddy-agent",
        "@mvn//org/mockito/mockito-core",
        "@mvn//org/objenesis/objenesis",
    ],
)

java_test(
    name = "general_commenter_test",
    size = "small",
    srcs = ["src/test/net/evendanan/bazel/mvn/merger/TargetCommenterTest.java"],
    test_class = "net.evendanan.bazel.mvn.merger.TargetCommenterTest",
    deps = [
        ":api_lib",
        ":merger",
        "@mvn//com/google/guava/guava",
        "@mvn//junit/junit",
        "@mvn//net/bytebuddy/byte-buddy",
        "@mvn//net/bytebuddy/byte-buddy-agent",
        "@mvn//org/mockito/mockito-core",
        "@mvn//org/objenesis/objenesis",
    ],
)

java_test(
    name = "target_type_test",
    size = "small",
    srcs = ["src/test/net/evendanan/bazel/mvn/impl/TargetsBuilderForTypeTest.java"],
    test_class = "net.evendanan.bazel.mvn.impl.TargetsBuilderForTypeTest",
    deps = [
        ":api_lib",
        ":impl_lib",
        "@mvn//com/google/guava/guava",
        "@mvn//junit/junit",
        "@mvn//org/mockito/mockito-core",
    ],
)
