module(name = "mabel_examples_java_plugin")

bazel_dep(name = "mabel", version = "0.0.0")
bazel_dep(name = "rules_java", version = "8.6.3")

local_path_override(
    module_name = "mabel",
    path = "../../",
)

# Maven dependencies
mabel = use_extension("@mabel//rules/maven_deps:extensions.bzl", "mabel")
mabel.install(lockfile = "//program:maven_install.json")
use_repo(
    mabel,
    "com_google_auto_value__auto_value__1_6_3",
    "com_google_auto_value__auto_value_annotations__1_6_3",
    "com_google_code_findbugs__jsr305__1_3_9",
    "com_google_dagger__dagger__2_19",
    "com_google_dagger__dagger_compiler__2_19",
    "com_google_dagger__dagger_producers__2_19",
    "com_google_dagger__dagger_spi__2_19",
    "com_google_errorprone__error_prone_annotations__2_1_3",
    "com_google_errorprone__javac_shaded__9_dev_r4023_3",
    "com_google_googlejavaformat__google_java_format__1_5",
    "com_google_guava__guava__25_0_jre",
    "com_google_j2objc__j2objc_annotations__1_1",
    "com_squareup__javapoet__1_11_1",
    "javax_annotation__jsr250_api__1_0",
    "javax_inject__javax_inject__1",
    "mabel_java_plugin",  # Alias repository for convenient access
    "org_checkerframework__checker_compat_qual__2_5_3",
    "org_codehaus_mojo__animal_sniffer_annotations__1_14",
)
