module(name = "mabel_examples_kotlin")

bazel_dep(name = "mabel", version = "0.0.0")
bazel_dep(name = "rules_java", version = "8.6.3")
bazel_dep(name = "rules_kotlin", version = "1.9.6")

local_path_override(
    module_name = "mabel",
    path = "../../",
)

# Maven dependencies
mabel = use_extension("@mabel//rules/maven_deps:extensions.bzl", "mabel")
mabel.install(lockfile = "//program:maven_install.json")
use_repo(
    mabel,
    "maven",  # Alias repository for convenient access
    "com_github_salomonbrys_kotson__kotson__2_5_0",
    "com_google_code_gson__gson__2_8_0",
    "org_jetbrains__annotations__13_0",
    "org_jetbrains_kotlin__kotlin_runtime__1_0_6",
    "org_jetbrains_kotlin__kotlin_stdlib__1_3_72",
    "org_jetbrains_kotlin__kotlin_stdlib_common__1_3_72",
)
