module(name = "mabel_examples_kotlin")

bazel_dep(name = "mabel", version = "0.0.0")
bazel_dep(name = "rules_java", version = "8.6.3")
bazel_dep(name = "rules_kotlin", version = "1.9.6")

local_path_override(
    module_name = "mabel",
    path = "../../",
)

# Maven dependencies
mabel = use_extension("@mabel//rules/maven_deps:extensions.bzl", "mabel")
mabel.install(
    lockfile = "//program:maven_install.json",
    aliases_repo = "kotlin_maven",
)
use_repo(mabel, "kotlin_maven")
