load("@build_bazel_rules_android//android:rules.bzl", "aar_import")
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library", "kt_jvm_import")
load("@mabel//rules/maven_deps:mabel.bzl", "mabel_rule")
load("@rules_android//android:rules.bzl", "android_binary")
load("//program/main_deps:dependencies.bzl", "generate_transitive_dependency_targets")
load(":g_artifact.bzl", "g_artifact")

generate_transitive_dependency_targets(
    aar_import = aar_import,
    kt_android_library = kt_android_library,
    kt_jvm_import = kt_jvm_import,
)

mabel_rule(
    name = "main_deps",
    calculate_sha = False,
    maven_deps = [
        g_artifact("androidx.fragment:fragment:1.1.0-alpha02"),
        g_artifact("androidx.appcompat:appcompat:1.0.2"),
        g_artifact("androidx.annotation:annotation:1.0.0"),
    ],
)

android_binary(
    name = "app",
    srcs = ["HelloActivity.java"],
    custom_package = "net.evendanan.bazel.mvn.example",
    manifest = "AndroidManifest.xml",
    manifest_values = {
        "compileSdkVersion": "28",
        "minSdkVersion": "19",
        "targetSdkVersion": "28",
        "versionCode": "1",
        "versionName": "v0.0.1",
    },
    resource_files = glob(["res/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//program:androidx_fragment__fragment",
        "//program/main_deps/androidx/annotation/annotation",
        "//program/main_deps/androidx/appcompat/appcompat",
        "//program/main_deps/com/github/menny/Chauffeur/permissions",
    ],
)
