load("@build_bazel_rules_android//android:rules.bzl", "android_binary")
load("@mabel//rules/maven_deps:mabel.bzl", "artifact", "mabel_rule")
load("//program/main_deps:dependencies.bzl", "generate_transitive_dependency_targets")

#here is an example of using a replacement implementation for aar_import
load(":aar_import_replacement.bzl", "macro_instead_of_aar_import")
load(":g_artifact.bzl", "g_artifact")

generate_transitive_dependency_targets(aar_import = macro_instead_of_aar_import)

mabel_rule(
    name = "main_deps",
    calculate_sha = False,
    maven_deps = [
        g_artifact("androidx.fragment:fragment:1.1.0-alpha02"),
        g_artifact("androidx.appcompat:appcompat:1.0.2"),
        g_artifact("androidx.annotation:annotation:1.0.0"),
        artifact(
            "com.github.menny.Chauffeur:permissions:90e703256785b7baf9cd37370b62b1d7d3830406",
            maven_exclude_deps = [
                "com.android.support",
            ],
            repositories = [
                "https://jitpack.io/",
                "https://maven.google.com/",
                "https://repo1.maven.org/maven2/",
            ],
        ),
    ],
)

android_binary(
    name = "app",
    srcs = ["HelloActivity.java"],
    custom_package = "net.evendanan.bazel.mvn.example",
    manifest = "AndroidManifest.xml",
    manifest_values = {
        "compileSdkVersion": "28",
        "minSdkVersion": "19",
        "targetSdkVersion": "28",
        "versionCode": "1",
        "versionName": "v0.0.1",
    },
    resource_files = glob(["res/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//program:androidx_fragment__fragment",
        "//program/main_deps/androidx/annotation/annotation",
        "//program/main_deps/androidx/appcompat/appcompat",
        "//program/main_deps/com/github/menny/Chauffeur/permissions",
    ],
)
