load("@mabel//rules/maven_deps:mabel.bzl", "artifact", "mabel_rule")
load(":g_artifact.bzl", "g_artifact")

mabel_rule(
    name = "main_deps",
    lockfile_path = ":maven_install.json",
    maven_deps = [
        g_artifact("androidx.fragment:fragment:1.1.0-alpha02"),
        g_artifact("androidx.appcompat:appcompat:1.0.2"),
        g_artifact("androidx.annotation:annotation:1.0.0"),
    ],
)

android_binary(
    name = "app",
    srcs = ["HelloActivity.java"],
    custom_package = "net.evendanan.bazel.mvn.example",
    manifest = "AndroidManifest.xml",
    manifest_values = {
        "compileSdkVersion": "28",
        "minSdkVersion": "19",
        "targetSdkVersion": "28",
        "versionCode": "1",
        "versionName": "v0.0.1",
    },
    resource_files = glob(["res/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "@mvn_android//androidx/annotation/annotation",
        "@mvn_android//androidx/appcompat/appcompat",
        "@mvn_android//androidx/fragment/fragment",
    ],
)
