load("@mabel//rules/maven_deps:mabel.bzl", "artifact", "mabel_rule")
load("@rules_java//java:defs.bzl", "java_binary", "java_plugin")

mabel_rule(
    name = "main_deps",
    fetch_srcjar = False,
    lockfile_path = "program/maven_install.json",
    maven_deps = [
        artifact(
            "com.google.dagger:dagger:2.19",
            type = "jar",
        ),
        artifact(
            "com.google.dagger:dagger-compiler:2.19",
            type = "auto",
        ),
        artifact(
            "com.google.auto.value:auto-value:1.6.3",
            type = "processor",
        ),
        artifact("com.google.auto.value:auto-value-annotations:1.6.3"),
    ],
    output_graph_to_file = True,
)

# AutoValue annotation processor
java_plugin(
    name = "autovalue_plugin",
    processor_class = "com.google.auto.value.processor.AutoValueProcessor",
    deps = ["@maven//com/google/auto/value/auto-value"],
)

# Dagger annotation processor
java_plugin(
    name = "dagger_plugin",
    processor_class = "dagger.internal.codegen.ComponentProcessor",
    deps = [
        "@com_google_dagger__dagger_compiler__2_19//:jar",
        "@com_google_dagger__dagger__2_19//:jar",
        "@com_google_dagger__dagger_producers__2_19//:jar",
        "@com_google_dagger__dagger_spi__2_19//:jar",
        "@com_google_errorprone__javac_shaded__9_dev_r4023_3//:jar",
        "@com_google_googlejavaformat__google_java_format__1_5//:jar",
        "@com_google_guava__guava__25_0_jre//:jar",
        "@com_squareup__javapoet__1_11_1//:jar",
        "@javax_annotation__jsr250_api__1_0//:jar",
        "@javax_inject__javax_inject__1//:jar",
    ],
)

java_binary(
    name = "java_plugin",
    srcs = [
        "HelloWorld.java",
        "Program.java",
    ],
    main_class = "examples.java_plugin.program.HelloWorld",
    plugins = [
        ":autovalue_plugin",
        ":dagger_plugin",
    ],
    deps = [
        "@maven//com/google/auto/value/auto-value-annotations",  # Using maven alias
        "@maven//com/google/dagger/dagger",  # Using maven alias
    ],
)
