load("@mabel//rules/maven_deps:mabel.bzl", "artifact", "mabel_rule")
load("@rules_java//java:defs.bzl", "java_binary", "java_plugin")

mabel_rule(
    name = "main_deps",
    fetch_srcjar = False,
    lockfile_path = "program/maven_install.json",
    maven_deps = [
        artifact(
            "com.google.dagger:dagger:2.19",
            type = "jar",
        ),
        artifact(
            "com.google.dagger:dagger-compiler:2.19",
            type = "auto",
        ),
        artifact(
            "com.google.auto.value:auto-value:1.6.3",
            type = "processor",
        ),
        artifact("com.google.auto.value:auto-value-annotations:1.6.3"),
    ],
    output_graph_to_file = True,
)

# AutoValue annotation processor
java_plugin(
    name = "autovalue_plugin",
    processor_class = "com.google.auto.value.processor.AutoValueProcessor",
    deps = ["@maven//com/google/auto/value/auto-value"],
)

# Dagger annotation processor
java_plugin(
    name = "dagger_plugin",
    processor_class = "dagger.internal.codegen.ComponentProcessor",
    deps = [
        "@maven//com/google/dagger/dagger",
        "@maven//com/google/dagger/dagger-compiler",
        "@maven//com/google/dagger/dagger-producers",
        "@maven//com/google/dagger/dagger-spi",
        "@maven//com/google/errorprone/javac-shaded",
        "@maven//com/google/googlejavaformat/google-java-format",
        "@maven//com/google/guava/guava",
        "@maven//com/squareup/javapoet",
        "@maven//javax/annotation/jsr250-api",
        "@maven//javax/inject/javax.inject",
    ],
)

java_binary(
    name = "java_plugin",
    srcs = [
        "HelloWorld.java",
        "Program.java",
    ],
    main_class = "examples.java_plugin.program.HelloWorld",
    plugins = [
        ":autovalue_plugin",
        ":dagger_plugin",
    ],
    deps = [
        "@maven//com/google/auto/value/auto-value-annotations",
        "@maven//com/google/dagger/dagger",
    ],
)
