load("@mabel//rules/maven_deps:mabel.bzl", "artifact", "mabel_rule")
load("@rules_java//java:defs.bzl", "java_binary")

mabel_rule(
    name = "main_deps",
    fetch_srcjar = False,
    lockfile_path = "program/maven_install.json",
    maven_deps = [
        artifact(
            "com.google.dagger:dagger:2.19",
            type = "jar",
        ),
        artifact(
            "com.google.dagger:dagger-compiler:2.19",
            type = "auto",
        ),
        artifact(
            "com.google.auto.value:auto-value:1.6.3",
            type = "processor",
        ),
        artifact("com.google.auto.value:auto-value-annotations:1.6.3"),
    ],
    output_graph_to_file = True,
)

java_binary(
    name = "java_plugin",
    srcs = [
        "HelloWorld.java",
        "Program.java",
    ],
    main_class = "examples.java_plugin.program.HelloWorld",
    deps = [
        # Runtime dependencies
        "@maven//com/google/auto/value/auto-value-annotations",
        "@maven//com/google/dagger/dagger",
        # Annotation processors - using ___processors exports all java_plugins via exported_plugins
        # This is the recommended way to use processors (add to deps, not plugins)
        "@maven//com/google/auto/value/auto-value:auto-value___processors",
        "@maven//com/google/dagger/dagger-compiler:dagger-compiler___processors",
    ],
)
