load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")
load("@mabel//rules/maven_deps:mabel.bzl", "artifact", "mabel_rule")

mabel_rule(
    name = "main_deps",
    lockfile_path = "program/maven_install.json",
    maven_deps = [
        artifact("com.github.salomonbrys.kotson:kotson:2.5.0"),
        artifact("org.jetbrains.kotlin:kotlin-stdlib:1.3.72"),
    ],
)

kt_jvm_binary(
    name = "program",
    srcs = ["HelloWorld.kt"],
    main_class = "examples.kotlin.program.HelloWorldKt",
    deps = [
        "@com_github_salomonbrys_kotson__kotson__2_5_0//:jar",
        "@com_google_code_gson__gson__2_8_0//:jar",
        "@org_jetbrains_kotlin__kotlin_stdlib__1_3_72//:jar",
    ],
)
