load("@mabel//rules:mabel.bzl", "artifact", "mabel_rule")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")

mabel_rule(
    name = "main_deps",
    lockfile_path = "program/maven_install.json",
    maven_deps = [
        artifact("com.github.salomonbrys.kotson:kotson:2.5.0"),
        artifact("org.jetbrains.kotlin:kotlin-stdlib:1.3.72"),
    ],
)

kt_jvm_binary(
    name = "program",
    srcs = ["HelloWorld.kt"],
    main_class = "examples.kotlin.program.HelloWorldKt",
    deps = [
        "@kotlin_maven//com/github/salomonbrys/kotson/kotson",
        "@kotlin_maven//com/google/code/gson/gson",
        "@kotlin_maven//org/jetbrains/kotlin/kotlin-stdlib",
    ],
)
