load("@mabel//rules/maven_deps:mabel.bzl", "artifact", "mabel_rule")
load("@rules_java//java:defs.bzl", "java_binary")

mabel_rule(
    name = "main_deps",
    lockfile_path = "program/maven_install.json",
    maven_deps = [
        artifact("com.google.guava:guava:20.0"),
        artifact("org.jboss.resteasy:resteasy-client:3.13.1.Final"),
        artifact("com.google.inject:guice:4.2.3"),
    ],
)

java_binary(
    name = "plain_java",
    srcs = ["HelloWorld.java"],
    main_class = "examples.plain_java.program.HelloWorld",
    deps = ["@maven//com/google/guava/guava"],
)
